Cambios en el sitio privado

--- a/system_huellitas/views/admin/scrud_categorias.html
+++ b/system_huellitas/views/admin/scrud_categorias.html
@@ -149,10 +149,11 @@
                                 </div>
                                 <div class="col-sm-12 col-md-4 d-flex align-items-center">
                                     <div>
-                                    <!-- Botón para cargar imagen -->
-                                    <input type="file" class="form-control" id="upload" hidden>
-                                    <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                    <label class="btn btn-red-color text-light btn-sm" for="upload">Cargar imagen</label>
+                                        <!-- Botón para cargar imagen -->
+                                        <input type="file" class="form-control" id="upload" hidden>
+                                        <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                        <label class="btn btn-red-color text-light btn-sm" for="upload">Cargar
+                                            imagen</label>
                                     </div>
                                 </div>
                             </div>
@@ -211,10 +212,11 @@
                                 </div>
                                 <div class="col-sm-12 col-md-4 d-flex align-items-center">
                                     <div>
-                                    <!-- Botón para cargar imagen -->
-                                    <input type="file" class="form-control" id="upload" hidden>
-                                    <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
-                                    <label class="btn btn-red-color text-light btn-sm" for="upload">Cargar imagen</label>
+                                        <!-- Botón para cargar imagen -->
+                                        <input type="file" class="form-control" id="upload" hidden>
+                                        <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
+                                        <label class="btn btn-red-color text-light btn-sm" for="upload">Cargar
+                                            imagen</label>
                                     </div>
                                 </div>
                             </div>
@@ -246,13 +248,12 @@
                 </div>
             </div>
         </div>
-
-        <!-- Framework Bootstrap - JS -->
-        <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-        <!-- Script personalizado -->
-        <script src="../../controllers/utils/admin.js"></script>
     </main>
+
+    <!-- Framework Bootstrap - JS -->
+    <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Script personalizado -->
+    <script src="../../controllers/utils/admin.js"></script>
 </body>
 
 </html>
