Categorias perros y gatos lista

--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -52,7 +52,7 @@
                         <!-- Boton y texto -->
                         <div class="text-center mt-5">
                             <a
-                                class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white" href="">Iniciar sesión</a>
+                                class="btn btn-orange-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-6 mx-auto text-white" href="home.html">Iniciar sesión</a>
                             <div>
                                 ¿No tienes una cuenta?<a class="text-decoration-none text-dark fw-bold"
                                     href="../public/registro.html"> Registrate</a>
