--- a/system_huellitas/views/public/recuperacion_contra2.html
+++ b/system_huellitas/views/public/recuperacion_contra2.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="text-center">
                         <a class="btn btn-orange-color btn-lg text-light mb-2 d-grid gap-2 col-sm-12 col-md-12 mx-auto rounded-4"
-                            href="">Enviar código</a>
+                            href="../public/recuperacion_contra3.html">Enviar código</a>
                         <p class="fw-semibold">Recuerda revisar tu bandeja de correos para ver el código que debes
                             ingresar.</p>
                     </div>
