--- a/system_huellitas/resources/scss/main.css
+++ b/system_huellitas/resources/scss/main.css
@@ -38,6 +38,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-yellow-cream-color: rgba(247, 201, 86, 0.485);
   --bs-orange-cream-color: rgb(255, 191, 105);
   --bs-orange-color: rgb(238, 150, 75);
   --bs-skin-color: rgb(250, 240, 202);
@@ -55,6 +56,7 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
+  --bs-yellow-cream-color-rgb: 247, 201, 86;
   --bs-orange-cream-color-rgb: 255, 191, 105;
   --bs-orange-color-rgb: 238, 150, 75;
   --bs-skin-color-rgb: 250, 240, 202;
@@ -3170,6 +3172,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #212529;
 }
 
+.btn-yellow-cream-color {
+  --bs-btn-color: #000;
+  --bs-btn-bg: rgba(247, 201, 86, 0.485);
+  --bs-btn-border-color: rgba(247, 201, 86, 0.485);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgba(250, 220, 146, 0.56225);
+  --bs-btn-hover-border-color: rgba(249, 215, 130, 0.5365);
+  --bs-btn-focus-shadow-rgb: 159, 130, 55;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgba(251, 225, 160, 0.588);
+  --bs-btn-active-border-color: rgba(249, 215, 130, 0.5365);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: rgba(247, 201, 86, 0.485);
+  --bs-btn-disabled-border-color: rgba(247, 201, 86, 0.485);
+}
+
 .btn-orange-cream-color {
   --bs-btn-color: #000;
   --bs-btn-bg: rgb(255, 191, 105);
@@ -3456,6 +3475,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
+
+.btn-outline-yellow-cream-color {
+  --bs-btn-color: rgba(247, 201, 86, 0.485);
+  --bs-btn-border-color: rgba(247, 201, 86, 0.485);
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: rgba(247, 201, 86, 0.485);
+  --bs-btn-hover-border-color: rgba(247, 201, 86, 0.485);
+  --bs-btn-focus-shadow-rgb: 247, 201, 86;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: rgba(247, 201, 86, 0.485);
+  --bs-btn-active-border-color: rgba(247, 201, 86, 0.485);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgba(247, 201, 86, 0.485);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgba(247, 201, 86, 0.485);
   --bs-gradient: none;
 }
 
@@ -5247,6 +5283,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-dark-text-emphasis);
 }
 
+.alert-yellow-cream-color {
+  --bs-alert-color: var(--bs-yellow-cream-color-text-emphasis);
+  --bs-alert-bg: var(--bs-yellow-cream-color-bg-subtle);
+  --bs-alert-border-color: var(--bs-yellow-cream-color-border-subtle);
+  --bs-alert-link-color: var(--bs-yellow-cream-color-text-emphasis);
+}
+
 .alert-orange-cream-color {
   --bs-alert-color: var(--bs-orange-cream-color-text-emphasis);
   --bs-alert-bg: var(--bs-orange-cream-color-bg-subtle);
@@ -5713,6 +5756,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-dark-bg-subtle);
   --bs-list-group-active-bg: var(--bs-dark-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-dark-text-emphasis);
+}
+
+.list-group-item-yellow-cream-color {
+  --bs-list-group-color: var(--bs-yellow-cream-color-text-emphasis);
+  --bs-list-group-bg: var(--bs-yellow-cream-color-bg-subtle);
+  --bs-list-group-border-color: var(--bs-yellow-cream-color-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-yellow-cream-color-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-yellow-cream-color-border-subtle);
+  --bs-list-group-active-color: var(--bs-yellow-cream-color-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-yellow-cream-color-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-yellow-cream-color-text-emphasis);
 }
 
 .list-group-item-orange-cream-color {
@@ -7370,6 +7426,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-dark-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-yellow-cream-color {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-yellow-cream-color-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-orange-cream-color {
   color: #000 !important;
   background-color: RGBA(var(--bs-orange-cream-color-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -7485,6 +7546,15 @@ textarea.form-control-lg {
 .link-dark:hover, .link-dark:focus {
   color: RGBA(26, 30, 33, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(26, 30, 33, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-yellow-cream-color {
+  color: RGBA(var(--bs-yellow-cream-color-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-yellow-cream-color-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-yellow-cream-color:hover, .link-yellow-cream-color:focus {
+  color: RGBA(251, 225, 160, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(251, 225, 160, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-orange-cream-color {
@@ -8004,6 +8074,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-dark-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-yellow-cream-color {
+  --bs-focus-ring-color: rgba(var(--bs-yellow-cream-color-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-orange-cream-color {
   --bs-focus-ring-color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-focus-ring-opacity));
 }
@@ -8198,6 +8272,11 @@ textarea.form-control-lg {
 .border-dark {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-yellow-cream-color {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-yellow-cream-color-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-orange-cream-color {
@@ -9202,6 +9281,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-yellow-cream-color {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-yellow-cream-color-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-orange-cream-color {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-text-opacity)) !important;
@@ -9449,6 +9533,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-dark-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-yellow-cream-color {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-yellow-cream-color-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-orange-cream-color {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-orange-cream-color-rgb), var(--bs-link-underline-opacity)) !important;
@@ -9585,6 +9674,11 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-yellow-cream-color {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-yellow-cream-color-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-orange-cream-color {
