--- a/system_huellitas/resources/scss/main.scss
+++ b/system_huellitas/resources/scss/main.scss
@@ -11,6 +11,10 @@ $font-family-sans-serif:  "Inter", sans-serif;
 // PALETA DE COLORES
 // Declaración de variables para asignación de colores
 
+$yellow-cream-color: (
+  "yellow-cream-color":   rgba(247, 201, 86, 0.485)
+);
+
 $orange-cream-color: (
   "orange-cream-color":   rgb(255, 191, 105)
 );
@@ -53,6 +57,7 @@ $green-color: (
 
 
 // Agregar variables al tema de colores de boostrap, mergearlas
+$theme-colors: map-merge($theme-colors, $yellow-cream-color);
 $theme-colors: map-merge($theme-colors, $orange-cream-color);
 $theme-colors: map-merge($theme-colors, $orange-color);
 $theme-colors: map-merge($theme-colors, $skin-color);
