crecion de la ventana de historial y cambio de index por home

--- a/system_huellitas/views/public/historial_compras.html
+++ b/system_huellitas/views/public/historial_compras.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huellitas pets - Home</title>
+    <title>Historial_de_compra</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
-    <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">   
+    <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/static_components/menu_public.css">
 </head>
-<body>
+
+<body style="background-color: #FEF6F0;">
     <header>
         <nav id="navbar"></nav>
     </header>
-    
+
+    <div class="container-fluid pt-5">
+            <br>
+            <div class="p-5">
+                <h3><b>Historial de compras</b></h3>
+                <h6>Mis Compras</h6>
+            </div>
+                
+
+        <div class="container shadow p-4 mt-4 rounded-4" style="background-color: #FFFFFF;">
+            <h5 >
+                <b>13 de enero, 2024</b>
+            </h5>
+        </div>
+    </div>
 
     <div class="mt-5 p-5">
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
 
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        <h1>Hola</h1>
-        
     </div>
 
     <footer id="footer"></footer>
@@ -34,6 +42,7 @@
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
-    <script src="../../controllers/utils/public.js"></script>   
+    <script src="../../controllers/utils/public.js"></script>
 </body>
+
 </html>
