--- a/system_huellitas/views/public/registro.html
+++ b/system_huellitas/views/public/registro.html
@@ -86,7 +86,7 @@
                                 class="btn btn-brown-color btn-lg mb-2 d-grid gap-2 col-sm-12 col-md-4 mx-auto" href="">Regístrarse</a>
                             <div>
                                 ¿Ya tienes una cuenta?<a class="text-decoration-none text-dark fw-bold"
-                                    href="../public/index.html"> Iniciar sesión</a>
+                                    href="../public/login.html"> Iniciar sesión</a>
                             </div>
                         </div>
                     </div>
