--- a/system_huellitas/views/public/perfil_editar.html
+++ b/system_huellitas/views/public/perfil_editar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil</title>
+    <title>Perfil_editar</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
@@ -21,12 +21,10 @@
     </header>
 
     <div class="container-fluid pt-5">
-        <div class="row">
             <br>
             <h5 class="p-5">
                 <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
             </h5>
-        </div>
         <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-7 p-5">
@@ -45,38 +43,38 @@
 
                 <div class="col-lg-7 col-md-5 col-sm-8 p-5">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="nombre_cliente_editar_perfil" class="form-label fw-bold">Nombre</label>
                             <input type="text" id="nombre_cliente_editar_perfil" name="nombreClienteEditarPerfil"
                                 class="form-control form-control-lg shadow  rounded-3 bg-white">
                             <br>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="apellido_cliente_editar_perfil" class="form-label fw-bold">Apellidos</label>
                             <input type="text" id="apellido_cliente_editar_perfil" name="apellidoClienteEditarPerfil"
                                 class="form-control form-control-lg shadow  rounded-3 bg-white">
                             <br>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="DUI_cliente_editar_perfil" class="form-label fw-bold">DUI</label>
                             <input type="number" id="DUI_cliente_editar_perfil" name="DUIClienteEditarPerfil"
                                 class="form-control form-control-lg shadow  rounded-3 bg-white">
                             <br>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="gmail_cliente_editar_perfil" class="form-label fw-bold">Correo electrónico</label>
                             <input type="email" id="gmail_cliente_editar_perfil" name="gmailClienteEditarPerfil"
                                 class="form-control form-control-lg shadow  rounded-3 bg-white">
                             <br>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="fecha_nacimiento_cliente_editar_perfil" class="form-label fw-bold">Fecha de
                                 nacimiento</label>
                             <input type="date" id="fecha_nacimiento_cliente_editar_perfil" name="fechaNacimientoClienteEditarPerfil"
                                 class="form-control form-control-lg shadow  rounded-3 bg-white">
                             <br>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <label for="direccion_cliente_editar_perfil" class="form-label fw-bold">Dirección</label>
                             <input type="text" id="direccion_cliente_editar_perfil" name="direccionClienteEditarPerfil"
                                 class="form-control form-control-lg shadow  rounded-3 bg-white">
